<resources>
    <string name="app_name">CinemaSearcher</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tvPoster">TextView</string>
    <string name="tvTitle">TextView</string>
    <string name="tvYear">TextView</string>
    <string name="tvimdbID">TextView</string>
    <string name="tvType">TextView</string>
    <string name="img">ImageView</string>
    <string name="todo">TODO</string>
    <string name="warning404">Произошла ошибка 404</string>
    <string name="warning500">Произошла ошибка 500</string>
    <string name="notAvaliable">Список фильмов недоступен</string>
    <string name="unknownError">Произошла неизвестная ошибка. Повторите попытку позже</string>
    <string name="button">Кнопка</string>
    <string name="forTVmain">пока тут ничего нет</string>
    <string name="apiKey">5db4e8292aa115ea2fafa4ef4c7ac872</string>
    <string name="connection_problem">Проблема подключения</string>
    <string name="movie">Фильм:</string>
    <string name="release_date">Дата релиза:</string>
    <string name="orig_lang">Язык оригинала:</string>
    <string name="homepage">Домашняя страница:</string>
    <string name="overview">Описание:</string>
    <string name="genres">Жанры:</string>
    <string name="triller">Триллер, </string>
    <string name="mystery">Мистика</string>
    <string name="drama">Драма</string>
    <string name="raiting">Рейтинг:</string>
    <string name="budget">Бюджет:</string>
    <string name="nameOfFilm">Название</string>


</resources>
